--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Lasagna</title>
 </head>
 
@@ -13,38 +14,54 @@
     <a href="../index.html">HOME</a>
     <br>
     <br>
-    <img src="../img/lasagna" alt="Slow Cooker Lasagna">
+    <img src="../img/lasagna" alt="Slow Cooker Lasagna" class="lasagna">
 
-    <p>Combine mince, bolognese pasta sauce, and cheese to make this super-simple slow-cooker lasagne.</p>
+    <p class="description">Combine mince, bolognese pasta sauce, and cheese to make this super-simple slow-cooker
+        lasagne.</p>
 
     <h4>Ingredients</h4>
-    <ul>
+    <ul id="ingredients">
         <li>1 tbsp extra virgin olive oil</li>
+        <br>
         <li>1kg veal mince</li>
+        <br>
         <li>90g (1/3 cup) tomato paste</li>
+        <br>
         <li>(1/2 cup) red wine</li>
+        <br>
         <li>680g Coles Mum's Sause Bolognese</li>
+        <br>
         <li>250ml (1 cup) Massel chicken style liquid stock</li>
+        <br>
         <li>1 tbsp dried oregano leaves</li>
+        <br>
         <li>600ml ctn pouring cream</li>
+        <br>
         <li>3 eggs, lightly whisked</li>
+        <br>
         <li>300g (3 cups) coarsely grated three cheese mix</li>
+        <br>
         <li>250g pkt dried lasagne sheets</li>
+        <br>
         <li>Fresh curly parsley leaves, to serve</li>
+        <br>
     </ul>
 
     <h4>Method</h4>
-    <ol>
+    <ol id="method">
         <li>Heat the oil in a large frying pan over high heat. Cook the mince, stirring with a wooden spoon to break up
             any lumps, for 10 minutes or until the mince changes colour. Add the tomato paste. Cook, stirring, for 1
             minute to coat. Add the wine. Cook for 1 minute or until the wine evaporates. Add the pasta sauce, stock and
             oregano. Season. Simmer for 10 minutes or until reduced slightly.</li>
+        <br><br>
         <li>Meanwhile, whisk the cream and eggs in a bowl until well combined. Season. Stir in 2 cups cheese.</li>
+        <br><br>
         <li>Grease the insert of a 3.5L slow cooker. Spread a thin layer of the mince mixture over the base of the
             insert. Cover with a layer of lasagne sheets, breaking the sheets to fit, if necessary. Drizzle one-fifth of
             the cream mixture over the lasagne sheets and top with one-quarter of the remaining mince mixture. Continue
             layering with remaining lasagne sheets, cream mixture and mince mixture, finishing with a layer of cream
             mixture. Sprinkle with remaining 1 cup cheese.</li>
+        <br><br>
         <li>Cook on Low for 3 1/2 - 4 hours or until the lasagne sheets are tender and the liquid is mostly absorbed.
             Carefully remove the insert from the slow cooker. Set aside, covered, for 10-15 minutes to rest. Sprinkle
             with parsley.</li>
